# lr-scheduling

./: LICENSE  README.md  pyproject.toml
data/: ann0.2_openwebtext2_llama_norm_nlayers10_nhead8_lr0.001_sched_wsd_warmup300_iter12500_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_openwebtext2_llama_norm_nlayers10_nhead8_lr0.001_sched_wsd_warmup300_iter17500_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_openwebtext2_llama_norm_nlayers10_nhead8_lr0.001_sched_wsd_warmup300_iter7500_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_openwebtext2_llama_norm_nlayers12_nhead10_lr0.001_sched_wsd_warmup300_iter10000_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_openwebtext2_llama_norm_nlayers12_nhead10_lr0.001_sched_wsd_warmup300_iter17500_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_openwebtext2_llama_norm_nlayers12_nhead10_lr0.001_sched_wsd_warmup300_iter25000_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_openwebtext2_llama_norm_nlayers12_nhead14_lr0.0005_sched_wsd_warmup300_iter15000_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_openwebtext2_llama_norm_nlayers12_nhead14_lr0.0005_sched_wsd_warmup300_iter25000_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_openwebtext2_llama_norm_nlayers12_nhead14_lr0.0005_sched_wsd_warmup300_iter30000_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_slimpajama_llama_norm_nlayers10_nhead8_lr0.001_sched_wsd_warmup300_iter12500_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_slimpajama_llama_norm_nlayers10_nhead8_lr0.001_sched_wsd_warmup300_iter7500_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_slimpajama_llama_norm_nlayers12_nhead10_lr0.001_sched_wsd_warmup300_iter10000_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_slimpajama_llama_norm_nlayers12_nhead10_lr0.001_sched_wsd_warmup300_iter17500_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_slimpajama_llama_norm_nlayers12_nhead12_lr0.0005_sched_wsd_warmup300_iter15000_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_slimpajama_llama_norm_nlayers12_nhead12_lr0.0005_sched_wsd_warmup300_iter25000_bs50x2_ws2_seed0_data_seed1337.json  ann0.2_slimpajama_llama_norm_nlayers16_nhead12_lr0.0005_sched_wsd_warmup300_iter25000_bs50x2_ws2_seed0_data_seed1337.json  (+177 more)
reanalysis/: analysis_cooldown_length.py  analysis_grad_norm.py  (+6 more)
(+64 files in other folders)
