[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scheduled"
dynamic = ["version"]
description = 'Optimization bounds for learning rate schedules'
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "Fabian Schaipp", email = "fabian.schaipp@tum.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]

[project.urls]
Documentation = "https://github.com/fabian-sp/scheduled#readme"
Issues = "https://github.com/fabian-sp/scheduled/issues"
Source = "https://github.com/fabian-sp/scheduled"

[tool.hatch.version]
path = "src/scheduled/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "matplotlib",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/scheduled tests}"

[tool.coverage.run]
source_pkgs = ["scheduled", "tests"]
branch = true
parallel = true
omit = [
  "src/scheduled/__about__.py",
]

[tool.coverage.paths]
scheduled = ["src/scheduled", "*/scheduled/src/scheduled"]
tests = ["tests", "*/scheduled/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

# The minimum Python version that should be supported
target-version = "py39"

src = ["src"]